--- a/Experiments/Tweepy.ipynb
+++ b/Experiments/Tweepy.ipynb
@@ -139,7 +139,7 @@
    "hash": "8148ccd35dea3a8be84672e8c27eb69bfb1410ff9e759f3957e44ddfd3ab2152"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('argminer')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -153,10 +153,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.10"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
